--- a/dev/vecchia_model/index.html
+++ b/dev/vecchia_model/index.html
@@ -92,7 +92,7 @@ para_U  = rchol(para_vecchia, Float64[]).U
 para_kl = (tr(para_U&#39;*K_perm*para_U) - length(pts)) + (-2*logdet(para_U) - logdet(K_perm))
 
 println(&quot;KL divergence with true parametric kernel:  &quot;, para_kl)
-println(&quot;KL divergence with nonparametric estimator: &quot;, kl)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">This is MadNLP version v0.8.12, running with umfpack
+println(&quot;KL divergence with nonparametric estimator: &quot;, kl)</code></pre><pre class="documenter-example-output"><code class="nohighlight hljs ansi">This is <span class="sgr34">Mad</span><span class="sgr31">N</span><span class="sgr32">L</span><span class="sgr35">P</span> version v0.9.1, running with MUMPS v5.8.2
 
 Number of nonzeros in constraint Jacobian............:      200
 Number of nonzeros in Lagrangian Hessian.............:     6260
@@ -107,42 +107,46 @@ Total number of inequality constraints...............:        0
    inequality constraints with lower and upper bounds:        0
         inequality constraints with only upper bounds:        0
 
-iter    objective    inf_pr   inf_du inf_compl lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls
-   0  5.0821582e+04 1.00e-02 9.87e+01 8.99e+00  -1.0 0.00e+00    -  0.00e+00 0.00e+00   0
-   1 -3.3205312e+04 1.70e-01 4.13e+01 8.76e+00  -1.0 1.48e+00    -  2.29e-02 1.00e+00h  1
-   2 -8.0125182e+04 1.68e+00 6.25e+01 5.11e+00  -1.0 2.09e+00    -  4.22e-01 1.00e+00h  1
-   3 -6.9284133e+04 1.28e+00 4.49e+01 2.55e+00  -1.0 4.97e+00    -  5.12e-01 1.00e+00h  1
-   4 -6.8700896e+04 1.77e-01 5.66e+00 7.39e-01  -1.0 6.48e-01    -  7.39e-01 1.00e+00h  1
-   5 -6.8632908e+04 9.66e-03 1.56e-01 1.09e-01  -1.0 2.22e-01    -  1.00e+00 1.00e+00h  1
-   6 -6.8631258e+04 6.22e-05 5.67e-03 2.64e-02  -2.5 1.13e-02    -  1.00e+00 1.00e+00h  1
-   7 -6.8631316e+04 1.73e-05 1.63e-03 6.57e-03  -3.8 5.85e-03    -  1.00e+00 1.00e+00h  1
-   8 -6.8631337e+04 3.97e-06 3.74e-04 1.63e-03  -3.8 2.81e-03    -  1.00e+00 1.00e+00h  1
-   9 -6.8631345e+04 8.80e-07 8.25e-05 3.31e-04  -5.7 1.33e-03    -  1.00e+00 1.00e+00h  1
-iter    objective    inf_pr   inf_du inf_compl lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls
-  10 -6.8631347e+04 1.01e-07 9.45e-06 3.95e-05  -5.7 4.49e-04    -  1.00e+00 1.00e+00h  1
-  11 -6.8631347e+04 2.23e-09 2.09e-07 2.68e-06  -5.7 6.67e-05    -  1.00e+00 1.00e+00h  1
-  12 -6.8631347e+04 1.23e-11 1.15e-09 7.10e-09  -8.6 4.95e-06    -  1.00e+00 1.00e+00h  1
-  13 -6.8631347e+04 8.88e-16 2.31e-13 9.12e-12 -11.0 1.32e-08    -  1.00e+00 1.00e+00h  1
+iter    objective    inf_pr   inf_du inf_compl lg(mu) lg(rg) alpha_pr ir ls
+   0  5.1449694e+04 1.00e-02 9.61e+01 8.99e+00  -1.0     -   0.00e+00  1  0
+   1 -3.1484165e+04 1.54e-01 3.89e+01 8.75e+00  -1.0     -   1.00e+00  1  1h
+   2 -7.8185501e+04 1.48e+00 5.80e+01 5.18e+00  -1.0     -   1.00e+00  1  1h
+   3 -6.7335906e+04 1.25e+00 4.25e+01 2.99e+00  -1.0     -   1.00e+00  1  1h
+   4 -6.6821246e+04 1.77e-01 5.46e+00 6.90e-01  -1.0     -   1.00e+00  1  1h
+   5 -6.6771965e+04 8.82e-03 1.54e-01 1.06e-01  -1.0     -   1.00e+00  1  1h
+   6 -6.6771061e+04 6.72e-05 5.66e-03 2.64e-02  -2.5     -   1.00e+00  1  1h
+   7 -6.6771115e+04 1.87e-05 1.63e-03 6.56e-03  -3.8     -   1.00e+00  1  1h
+   8 -6.6771139e+04 4.27e-06 3.72e-04 1.62e-03  -3.8     -   1.00e+00  1  1h
+   9 -6.6771147e+04 9.34e-07 8.11e-05 3.25e-04  -5.7     -   1.00e+00  1  1h
+iter    objective    inf_pr   inf_du inf_compl lg(mu) lg(rg) alpha_pr ir ls
+  10 -6.6771149e+04 1.02e-07 8.88e-06 3.73e-05  -5.7     -   1.00e+00  1  1h
+  11 -6.6771149e+04 2.02e-09 1.75e-07 2.54e-06  -5.7     -   1.00e+00  1  1h
+  12 -6.6771150e+04 1.12e-11 9.72e-10 6.40e-09  -8.6     -   1.00e+00  1  1h
+  13 -6.6771150e+04 8.88e-16 2.36e-13 9.12e-12 -11.0     -   1.00e+00  2  1h
 
 Number of Iterations....: 13
 
                                    (scaled)                 (unscaled)
-Objective...............:  -6.4121435964120192e+03   -6.8631347215709495e+04
-Dual infeasibility......:   2.3092638912203256e-13    2.4716834479459581e-12
+Objective...............:  -5.7727030594965208e+03   -6.6771149507973460e+04
+Dual infeasibility......:   2.3589122935019274e-13    2.7284841053187847e-12
 Constraint violation....:   8.8817841970012523e-16    8.8817841970012523e-16
-Complementarity.........:   8.5238671585623544e-13    9.1233840568888896e-12
-Overall NLP error.......:   9.1233840568888896e-12    9.1233840568888896e-12
+Complementarity.........:   7.8809676198965177e-13    9.1156822339914996e-12
+Overall NLP error.......:   9.1156822339914996e-12    9.1156822339914996e-12
 
-Number of objective function evaluations             = 14
-Number of objective gradient evaluations             = 14
-Number of constraint evaluations                     = 14
-Number of constraint Jacobian evaluations            = 14
-Number of Lagrangian Hessian evaluations             = 13
-Total wall-clock secs in solver (w/o fun. eval./lin. alg.)  = 11.879
-Total wall-clock secs in linear solver                      =  0.275
-Total wall-clock secs in NLP function evaluations           =  0.001
-Total wall-clock secs                                       = 12.155
+Number of objective function evaluations              = 14
+Number of objective gradient evaluations              = 14
+Number of constraint evaluations                      = 14
+Number of constraint Jacobian evaluations             = 14
+Number of Lagrangian Hessian evaluations              = 13
+Number of KKT factorizations                          = 14
+Number of KKT backsolves                              = 15
 
-EXIT: Optimal Solution Found (tol = 1.0e-10).
-KL divergence with true parametric kernel:  0.4073216331238996
-KL divergence with nonparametric estimator: 1.4655903707089664</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../reference/">Reference »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.16.1 on <span class="colophon-date" title="Wednesday 21 January 2026 20:30">Wednesday 21 January 2026</span>. Using Julia version 1.12.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+Total wall secs in initialization                     =  1.592 s
+Total wall secs in linear solver                      =  0.006 s
+Total wall secs in NLP function evaluations           =  0.000 s
+Total wall secs in solver (w/o init./fun./lin. alg.)  =  4.152 s
+Total wall secs                                       =  5.750 s
+
+<span class="sgr32">EXIT: Optimal Solution Found (tol = 1.0e-10).</span>
+KL divergence with true parametric kernel:  0.6419259887543376
+KL divergence with nonparametric estimator: 1.654144246751315</code></pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../reference/">Reference »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.17.0 on <span class="colophon-date" title="Wednesday 25 February 2026 23:36">Wednesday 25 February 2026</span>. Using Julia version 1.12.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
